--- a/index.html
+++ b/index.html
@@ -12,7 +12,73 @@
       }
 
       /* Hint: What can you do with a media query and flexbox? */
-      @media (max-width: 1250px) {}
+      .pricing-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+        height: 100vh;
+
+      }
+
+      ul {
+        list-style: none;
+      }
+
+      li {
+        padding: 5px;
+      }
+
+      .plan-title {
+        font-size: 24px;
+      }
+
+      .plan-price {
+        font-size: 40px;
+      }
+
+      .pricing-container .pricing-plan {
+        border: 2px solid #007BFF;
+        border-radius: 10px;
+        padding: 20px;
+        max-width: 300px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: #007bff8e;
+        flex: 1;
+      }
+
+      .plan-button {
+        background-color: #0026ff;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+      }
+
+      .pricing-plan>div {
+        font-weight: bold;
+      }
+
+      .plan-features {
+        align-self: space-between;
+      }
+
+      @media (max-width: 1250px) {
+        .pricing-container {
+          flex-direction: column;
+          height: 100%;
+        }
+
+        .pricing-container>* {
+          width: 80%;
+          margin-bottom: 20px;
+          align-self: center;
+        }
+
+      }
     </style>
   </head>
 
